samples/_failures_safe/1761442684_17d923_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_346f7e9c.c: In function ‘main’:
./samples/SAFE/__tmp_346f7e9c.c:172:12: error: missing terminating " character
  172 |     printf("Enter input to tokenize
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_346f7e9c.c:172:5: error: expected expression at end of input
  172 |     printf("Enter input to tokenize
      |     ^~~~~~
./samples/SAFE/__tmp_346f7e9c.c:172:5: error: expected declaration or statement at end of input
